--- a/style.css
+++ b/style.css
@@ -319,12 +319,12 @@ header #meun-bar{
         padding: 20px 2px;
     }
     .result p{
-        font-size: 12px;
-    }.result h2{
         font-size: 15px;
+    }.result h2{
+        font-size: 25px;
     }
     .git a{
-        font-size: 20px;
+        font-size: 25px;
     }
     .cont{
         text-align: center;
@@ -333,9 +333,9 @@ header #meun-bar{
         font-size: 30px;
     }
     .reach{
-        margin:2rem 0rem;
+        margin:1rem 0px;
         width:100%;
-        height: 50%;
+        /* height: 20%; */
         border: none;
         background: rgb(108, 106, 106);
     }
@@ -350,10 +350,10 @@ header #meun-bar{
     .reach a{
         gap: 10px;
         color: wheat;
-        margin: 10px 3px;
+        margin: 10px 5px;
         text-decoration: none;
-        font-size: 30px;
-        padding-bottom: 20px ;
+        font-size: 20px;
+        padding-bottom: 10px ;
     }
 
     .footer .p1{
